Fixed scrollbar

--- a/sass-scss/style.scss
+++ b/sass-scss/style.scss
@@ -5,7 +5,7 @@ body {
   background-color: black;
   font-size: 12px;
   color: $textColor;
- /*  overflow-x: hidden */;
+  /*  overflow-x: hidden */
 }
 
 .myBgGradient {
@@ -68,6 +68,10 @@ body {
   width: 12px;
 }
 
+::-webkit-scrollbar-track {
+  background-color: black;
+}
+
 ::-webkit-scrollbar-thumb {
   background-color: $textColor;
 }
@@ -80,10 +84,9 @@ body {
 /* ARTIST PAGE  */
 
 #centralSection {
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100vh;
   overflow-x: hidden;
-
 }
 
 #artistHeader {
